--- a/css/global.less
+++ b/css/global.less
@@ -567,7 +567,7 @@ label{display: inline-block;}
 
 .icon32.fonticon{margin: 16px 8px 0 0;}
 
-.updated.fade{opacity: 1;}
+.updated.fade, .error.fade{opacity: 1;}
 
 .wp-menu-name{text-shadow: none;}
 .wp-menu-name:before { text-shadow: none; color: #333; }
